gui/kprocessrunner: don't set an invalid working directory when the first url is a broken symlink

Currently, systemd complains about "WorkingDirectory= expects an absolute path or '~'"
when opening a broken symlink. The user will see that message when opening a broken
symlink in Dolphin, which is very confusing.

BUG: 492967